<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/list_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/edit_mode_controls"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.urbanairship.messagecenter.ui.widget.MessageRecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/UrbanAirship.MessageCenter.List"
            tools:itemCount="5"
            tools:listitem="@layout/ua_view_message_list_item"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_mode_controls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="16dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:background="?colorSurfaceContainer"
        app:layout_constraintTop_toBottomOf="@id/list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible"
        >

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.constraintlayout.helper.widget.Flow
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:flow_verticalAlign="center"
            app:flow_horizontalStyle="packed"
            app:flow_horizontalGap="8dp"
            app:flow_wrapMode="chain"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:constraint_referenced_ids="select_all_button,mark_read_button,delete_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_all_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:textColor="?colorOnSurface"
            android:text="@string/ua_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mark_read_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/ua_mark_read"
            android:textColor="?colorOnSurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:textColor="?colorOnSurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ua_delete" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
